# twitch_chatbot

./: .clippy.toml  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cli.rs  config.rs  main.rs  test_helpers.rs
src/commands/: basic.rs  eight_ball.rs  handler.rs  mod.rs
src/twitch/: client.rs  helix.rs  mod.rs  oauth.rs
src/users/: mod.rs  welcome.rs
